<resources>
    <string name="app_name">SampleWifi</string>

    <!-- TextView -->
    <string name="str_ssid">SSID : </string>
    <string name="str_bssid">BSSID : </string>
    <string name="str_capabilities">capabilities : </string>
    <string name="str_frequency">frequency : </string>
    <string name="str_level">level : </string>

    <!-- Button -->
    <string name="str_scan">WiFiスキャン実行</string>
    <string name="str_show_current_connection">現在の接続表示</string>
</resources>
